<resources>
    <string name="app_name">ChatApp</string>
    <string name="image">image</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="communities">Communities</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="register_to_start_chatting_all_over_the_world">Register to start chatting all over the world</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="nickname">Nickname</string>
    <string name="login">Login</string>
    <string name="have_an_account_already">Already have an account?</string>
    <string name="check_mail_message">Please check your email inbox or spam for verification</string>
    <string name="other_auth_options">or</string>
    <string name="google">Google</string>
    <string name="welcome_back">Welcome back</string>
    <string name="dont_have_account">I\'m a new user.</string>
    <string name="remember_me">Remember me</string>
    <string name="search">Search</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="sign_out">Sign out</string>
    <string name="signing_out">Signing Out</string>
    <string name="stay">Stay</string>
    <string name="loading">Loading</string>
    <string name="default_notification_channel_id">Messages channel</string>
    <string name="start_a_new_chat">Start a new chat</string>
    <string name="start">Start</string>
    <string name="background">background</string>
    <string name="enter_message">Type a message..</string>
    <string name="record_audio">record_audio</string>
    <string name="pick_interests">Pick 3 or more interests</string>
    <string name="_continue">Continue</string>
    <string name="i_ll_do_it_later">I\'ll do it later</string>
    <string name="join_a_community">Join a Community</string>
    <string name="join_group_ad_text">Join your first community and get\nfree 50 Viper Coins</string>
    <string name="join_now">Join now</string>
    <string name="enter_user_email">Enter the user\'s email you want to chat with</string>
    <string name="pick_topics">Pick 4 or more topics</string>
    <string name="get_50_coins">Get 50 Coins</string>
    <string name="for_your_first_communitiy">for your first communitiy</string>
    <string name="for_you">For you</string>
    <string name="all">All</string>
    <string name="movies">Movies</string>
    <string name="art">Art</string>
    <string name="sports">Sports</string>
    <string name="crypto">Crypto</string>
    <string name="finance">Finance</string>
    <string name="health">Health</string>
    <string name="members_count">%1$s Members</string>
    <string name="join_community">Join Community</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="group_info">Community Info</string>
    <string name="create_community">Create Community</string>
    <string name="options">Options</string>
    <string name="camera">Camera</string>
    <string name="add">Add</string>
    <string name="communities_by_interests">Communities by Interests</string>
    <string name="no_groups_were_found">No groups were found</string>
    <string name="edit">Edit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset Password</string>

    <string-array name="menu_rows">
        <item>Sign out</item>
    </string-array>
</resources>