<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container" android:id="@+id/chatFrag_menu">
        <item android:id="@+id/menu_options_chat"
            android:title="@string/options"
            android:icon="@drawable/ic_list"
            android:orderInCategory="3"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/menu_search_chat"
            android:title="@string/search"
            android:icon="@drawable/ic_baseline_search_24"
            app:showAsAction="ifRoom"
            android:orderInCategory="2"/>

        <item android:id="@+id/menu_camera"
            android:title="@string/camera"
            android:orderInCategory="1"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            app:showAsAction="ifRoom"/>
    </group>

</menu>